Fix backdrop color on dark mode

--- a/styles/module/_leftMenuDark.scss
+++ b/styles/module/_leftMenuDark.scss
@@ -1,7 +1,7 @@
 .dark-theme {
     #left-menu {
         &.black-backdrop {
-            background-color: rgba($black-dark, 0.7);
+            background-color: rgba($black, 0.7);
         }
 
         .main-menu,
